# embedded-ci

client/: Cargo.toml
client/src/: builder.rs  cli.rs  lib.rs  main.rs  requests.rs
common/: Cargo.toml
common/src/: job.rs  lib.rs
defmt-test-firmware/: Cargo.toml
defmt-test-firmware-m0/: Cargo.toml  build.rs  memory.x
defmt-test-firmware-m0/.cargo/: config.toml
defmt-test-firmware-m0/src/: lib.rs
defmt-test-firmware/.cargo/: config.toml
defmt-test-firmware/src/: lib.rs
rtt-test-firmware/: Cargo.toml  Embed.toml
rtt-test-firmware/.cargo/: config.toml
rtt-test-firmware/src/: lib.rs
server/: Cargo.toml  Rocket.toml  probe-config.json
server/src/: app.rs  auth.rs  cli.rs  lib.rs  main.rs  routes.rs  runner.rs  target.rs
sigrok-rs/: Cargo.toml
sigrok-rs/src/: lib.rs
