[package]
name = "embedded-ci-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
base64 = "0.13.0"
clap = { version = "3", features = ["derive"] }
log = "0.4.14"
object = "0.28.3"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.78"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }