[package]
name = "embedded-ci-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-ci-server = { path = "../server" }
anyhow = "1.0.53"
base64 = "0.13.0"
clap = { version = "3", features = ["derive", "env"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0.30"
