[package]
name = "embedded-ci-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-ci-common = { path = "../common", version = "0.1.0" }
anyhow = "1.0"
base64 = "0.13"
tokio = { version = "1.0" }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
log = "0.4"
