[package]
name = "embedded-ci-common"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
clap = { version = "3", features = ["derive"] }
num_enum = "0.5"
serde = { version = "1.0.135", features = ["derive"] }
