[package]
name = "embedded-ci-server"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-ci-common = { path = "../common", version = "0.1.0" }
anyhow = "1.0.53"
base64 = "0.13.0"
clap = { version = "3", features = ["derive"] }
crossbeam = "0.8"
defmt-decoder = { version = "0.3.0", features = [ "unstable" ] }
log = "0.4.14"
num_enum = "0.5"
object = "0.28.3"
once_cell = "1.9.0"
pretty_env_logger = "0.4.0"
probe-rs = "0.21.0"
rand = "0.8"
rocket = { version = "0.5", default-features = false, features = ["json", "uuid"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.30"
tokio = { version = "1.0", features = ["full"] }
