[package]
name = "sigrok-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.13.0"
bzip2 = { version = "0.4.4", features = ["tokio"] }
log = "0.4"
pretty_env_logger = "0.5.0"
regex = "1.10.2"
thiserror = "1.0"
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
